<resources>
    <string name="app_name">BreweryDb</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="brewery_id">ID</string>
    <string name="brewery_name">Name</string>
    <string name="brewery_city">CITY</string>
    <string name="fragment_label">BreweryDb</string>
    <string name="fragment_brewery_detail_lable">Brewery Detail</string>
    <string name="brewery_Address">ADDRESS</string>
    <string name="brewery_state">STATE</string>
    <string name="brewery_postcode">POSTCODE</string>
    <string name="brewery_phone">PHONE</string>
    <string name="home">Home</string>
</resources>