<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/breweryDetailFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light1">

    <TextView
        android:id="@+id/brewery_name"
        android:layout_width="330dp"
        android:layout_height="43dp"
        android:background="@color/blue_brew"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/brewery_name"
        android:textAlignment="center"
        android:textColor="@color/blue_light1"
        android:textSize="25dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.092" />

    <TextView
        android:id="@+id/brewery_id"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/brewery_id"
        android:textAlignment="center"
        android:textColor="@color/blue_brew"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <LinearLayout
        android:id="@+id/llAssets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/blue_brew_light"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="10dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.526">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:background="@color/blue_brew_LDark"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:padding="8dp"
                android:text="@string/brewery_Address"
                android:textAlignment="textStart"
                android:textColor="@color/blue_light1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/brewery_address"
                android:layout_width="153dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/brewery_Address"

                android:textColor="@color/blue_light1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:background="@color/blue_brew_LDark"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:padding="8dp"
                android:text="@string/brewery_city"
                android:textAlignment="textStart"
                android:textColor="@color/blue_light1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/brewery_city"
                android:layout_width="158dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLines="1"
                android:text="@string/brewery_city"
                android:textColor="@color/blue_light1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:background="@color/blue_brew_LDark"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:padding="8dp"
                android:text="@string/brewery_state"
                android:textAlignment="textStart"
                android:textColor="@color/blue_light1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/brewery_state"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLength="15"
                android:text="@string/brewery_state"
                android:textColor="@color/blue_light1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:background="@color/blue_brew_LDark"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:padding="8dp"
                android:text="@string/brewery_postcode"
                android:textAlignment="textStart"
                android:textColor="@color/blue_light1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/brewery_postcode"
                android:layout_width="162dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLength="15"
                android:text="@string/brewery_postcode"
                android:textColor="@color/blue_light1"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="8dp"
            android:background="@color/blue_brew_LDark"
            android:gravity="left"
            android:orientation="horizontal"
            android:padding="8dp"
            android:weightSum="2">

            <TextView
                android:layout_width="150dp"
                android:layout_height="50dp"
                android:layout_marginLeft="10dp"
                android:padding="8dp"
                android:text="@string/brewery_phone"
                android:textAlignment="textStart"
                android:textColor="@color/blue_light1"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/brewery_phone"
                android:layout_width="163dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:maxLength="15"
                android:text="@string/brewery_phone"
                android:textColor="@color/blue_light1"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>